# mac

./: .env  Cargo.toml  LICENSE  README.md  prompt.txt
src/: context_workflow.rs  file_tools.rs  gemini.rs  local.rs  main.rs  mcp_test.rs  model_selector.rs
